--- a/calculator/index.html
+++ b/calculator/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>About</title>
-        <link rel="stylesheet" href="style1.css">
+        <link rel="stylesheet" href="style.css">
     </head>
     <a  href="calculator.html"><img src="arrow.svg" style="width: 50px; height:30px"></a>
     <h2 style="text-align:center;"><u>About calculator</u></h2>
