--- a/simple intro template/index.html
+++ b/simple intro template/index.html
@@ -1,33 +1,24 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style/day2.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&family=Roboto:wght@300&display=swap" rel="stylesheet">
-</head>
-<body>
-    <form action="form">
-        <h1>Sign up</h1>
-        <hr>
-        <label for="name">First name</label><br>
-        <input type="text" placeholder="Enter your first name"><br> 
-        <label for="name">last name</label><br>
-        <input type="text" placeholder="Enter your last name"><br>
-        <label for="name">Date of Birth</label><br>
-        <input type="date" placeholder="dd/mm/yy"><br> 
-        <label for="name">Email</label><br>
-        <input type="email" placeholder="Enter your Email"><br>
-        <label for="name">Password</label><br>
-        <input type="password" placeholder="Enter your password"><br>
-        <label for="name">Confirm Password</label><br>
-        <input type="password" placeholder="Confirm your password"><br>
-        <br><button onclick="day1.html">Register</button>
-
-    </form>
-</body>
+<!doctype html>
+<html>
+    <head>
+        <link rel="stylesheet" href="styles.css" />
+        <link href="https://fonts.googleapis.com/css2?family=Bangers&family=Black+Ops+One&family=Creepster&family=La+Belle+Aurore&family=MedievalSharp&family=Orbitron&family=Rye&display=swap" rel="stylesheet">
+        <script src="index.js"></script>
+    </head>
+    <body>
+        <!-- 
+        Challenge 1:
+        Write the HTML for your personal website.
+        -->
+        <img src="per.jpg">
+        <h1>Hi, my name is Akshay</h1>
+        <h2>Fun facts about me:</h2>
+        <ul>
+            <li>21 years old</li>
+            <li>Live in India</li>
+        </ul>
+        <p>Please connect with me on <a href="https://www.linkedin.com/in/per-harald-borgen/" taget="_blank">LinkedIn here.</a></p>
+        <input type="text" placeholder="Enter email...">
+        <button>Join newsletter</button>
+    </body>
 </html>
